# parenting-bot

./: README.md  ai_post.py  post_test.py  pyproject.toml
.github/workflows/: post.yml
src/alpha/: crew.py  main.py
