[project]
name = "alpha"
version = "0.1.0"
description = "alpha using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.10.1",
]

[project.scripts]
alpha = "alpha.main:run"
run_crew = "alpha.main:run"
train = "alpha.main:train"
replay = "alpha.main:replay"
test = "alpha.main:test"
run_with_trigger = "alpha.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
